--- a/html/1.1.html
+++ b/html/1.1.html
@@ -163,7 +163,7 @@
             </div>
 
             <footer>
-                <a class="normalBtn fillBtn" href="1.11.html">我要申报</a>
+                <a class="normalBtn fillBtn wave left" href="1.11.html">我要申报</a>
             </footer>
         </section>
     </div>
