--- a/html/1.111.html
+++ b/html/1.111.html
@@ -47,7 +47,7 @@
                 </li>
             </ul>
             <footer>
-                <a class="normalBtn fillBtn" href="1.12.html">保存</a>
+                <a class="normalBtn fillBtn wave left" href="1.12.html">保存</a>
             </footer>
         </section>
     </div>
