--- a/html/1.112.html
+++ b/html/1.112.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="commonPage">
 			<header class="toolbar greenToolBar">
-				<a class="icon-back" href="../index.html"></a>
+				<a class="icon-back" href="1.11.html"></a>
 				<span class="title">查看视频</span>
 			</header>
 			<section class="main-Panel">
