--- a/html/3.13.html
+++ b/html/3.13.html
@@ -44,7 +44,7 @@
                             <input type="text" placeholder="请选择">
                             <div class="chooseBtn" id="chooseBtn"></div>
                         </div>
-                        <a class="normalBtn fillBtn">查看</a>
+                        <a class="normalBtn fillBtn wave left">查看</a>
                     </li>
                     <li>
                         <span class="grey">开始处理<br>时间</span>
