--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>养殖场角色管理应用</p>
       </div>
       <footer>
-        <a class="normalBtn fillBtn " href="html/1.1.html">立即体验</a>
+        <a class="normalBtn fillBtn wave left " href="html/1.1.html">立即体验</a>
       </footer>
     </section>
     <nav></nav>
